# sql-perf-linter

./: Cargo.toml  README.md
src/: lib.rs  main.rs
test_data/: add_column_with_default.sql  add_column_without_default.sql  create_index_async.sql  create_index_sync.sql  create_table.sql  rename_column.sql  rename_table.sql
