[package]
name = "sql-perf-linter"
version = "0.1.0"
authors = ["Peter Ebden <peter.ebden@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.3.5"
log = "0.4.8"
stderrlog = "0.4.3"
sqlparser = "0.5.1-alpha-0"

[patch.crates-io]
sqlparser = { git = 'https://github.com/peterebden/sqlparser-rs', branch = 'alter-add-column' }

[lib]
name = "linter"
path = "src/lib.rs"

[[bin]]
name = "sql-perf-linter"
path = "src/main.rs"

[profile.release]
lto = true
panic = 'abort'
